# lightswitch

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  utils.h
src/client/: ActionListener.cpp  ActionListener.h  Callback.cpp  Callback.h  Client.cpp  Client.h  ConnectionException.cpp  ConnectionException.h
src/observers/: SwitchObserver.cpp  SwitchObserver.h
